--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
   "scripts": {
     "dev": "vite --port 6274",
     "build": "tsc -b && vite build",
+    "vercel-build": "npm run build",
     "lint": "eslint .",
     "preview": "vite preview --port 6274",
     "test": "jest --config jest.config.cjs",
